containered the header

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
     height: 150px;
     margin: 0px 15px 10px 0px;
 }
-.navbar-brand a:hover, .navbar-brand a:focus{
+.navbar-nav a:hover, .navbar-brand a:focus{
     text-decoration: none;
 }
 .navbar-brand h1 {
@@ -33,7 +33,7 @@
     vertical-align: middle;
     font-size: 0.8em;
 }
-#header-nav {
+#header-brand {
     background-color: #f5f5dc;
     border-radius: 0;
     border: 0;
@@ -67,6 +67,6 @@
         height: 350px;
     }
 }
-#navbarSupportedContent ul li a {
+.nav-link {
     text-align: center;
 }
